--- a/index.css
+++ b/index.css
@@ -35,27 +35,62 @@ text-align: center;
     border-color: rgb(0, 0, 0) rgb(0, 0, 0) rgb(0, 0, 0) rgb(0, 0, 0);
     border-radius: 2rem;
 }
-@media only screeb and (max-widt: 768px){
+@media only screeb and (max-width: 768px){
 
 #botoes {
 
-  width: 25%;
+  width: auto;
   height: auto;
+  display: flex;
+  justify-content: center;
 
 }
 
 button {
 
   font-size: auto;
- width: auto;
- height:auto;
- padding: 0.75em 0.88em;
-
+  width: auto;
+  height:auto;
+  padding: auto auto;
+  border: auto solid #1a1b1b;
+  position: relative;
 }
 
 
 
 }
+
+@media only screeb and (max-width: 100px){
+
+  #botoes {
+  
+    width: auto;
+    height: auto;
+    display: flex;
+    justify-content: center;
+  
+  }
+  
+  button {
+  
+    font-size: auto;
+    width: auto;
+    height:auto;
+    padding: auto auto;
+    border: auto solid #1a1b1b;
+    position: relative;
+  }
+  
+  
+  
+  }
+
+
+
+
+
+
+
 
 *{
     box-sizing: border-box;
