--- a/index.css
+++ b/index.css
@@ -2,12 +2,17 @@ body    {
   width: 150vh;
   height: auto;
   background-color: #011b3d;
+
   
 }
 
 h1 {
 
 padding-top: 0.5em;
+display: flex;
+align-items: center;
+position: absolute;
+padding-left: 15%;
 color: rgb(255, 255, 255);
 font-family: Arial, Helvetica, sans-serif;
 box-shadow: inset, black;
@@ -41,7 +46,7 @@ text-align: center;
   41.8px 41.8px 33.4px rgba(0, 0, 0, 0.05),
   100px 100px 80px rgba(0, 0, 0, 0.07)
 ;
-
+background: linear-gradient(#000000 20%, #0257c7 100%)
 
 }
 
@@ -100,9 +105,16 @@ right: 100%;
     width: 50vh;
     height: auto;
   }
+  h1 {
+      display:flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 100%;
+      
+      }
   #botoes {
   
-  width: 30;
+  width: 45;
   height: 30;
   
   
@@ -121,23 +133,65 @@ right: 100%;
   
   
   }
+  /*Mobile Ate 375px*/
+@media only screen and (max-width: 375px){
+  body    {
+    width: 50vh;
+    height: auto;
+  }
+  h1 {
+      display:flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 25px;
+      
+      }
+  #botoes {
+  
+  width: 45;
+  height: 30;
+  
+  
+  }
+  
+  button {
+  
+  font-size: 0.90rem;
+  width: 100%;
+  height: 100%;
+  border: 0.5mm solid #1a1b1b;
+  align-items: center;
+  position: center;
+  }
+  
+  
+  
+  }
+
+
+
+
+
+
   /*Desktop*/
-  @media only screen and (min-width: 768){
+  @media only screen and (min-width: 768px){
     body    {
-      width: 150vh;
+      width: 300px;
       height: auto;
       
     }
     h1 {
-
-      font-size: 0.5px;
+      display:flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 25px;
       
       }
   
   #botoes {
   
-    width: 20vh;
-    height: 10vh;
+    width: 250%;
+    height: 150%;
     border: 5vh;
     justify-content: center;
     align-items: center;
@@ -147,8 +201,8 @@ right: 100%;
   button {
   
     font-size: 1rem;
-    width: 10;
-    height: 25;
+    width: 80%;
+    height: 45%;
     padding: 2rem;
     border: 1px solid #1a1b1b;
     display: grid;
